crates/rooch-framework-tests/tests/cases/object/object_cap.exp
processed 3 tasks

task 1 'publish'. lines 3-21:
status EXECUTED

task 2 'run'. lines 22-36:
Error: error[E01002]: unexpected token
   ┌─ /tmp/tempfile:31:47
   │
31 │         let context::remove_object<TestObject>(ctx, object_ref::id(&obj_ref));
   │                                               ^
   │                                               │
   │                                               Unexpected '('
   │                                               Expected '{'


